get rid of tests_pred.rds
Former-commit-id: cf9307658ea5a104cbdef76a23a5ef715274e212

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ data/pan_model_est.rds
 data/us_fit.rds
 data/mediator_eff.rds
 data/us_fit_scale.rds
+data/us_fit_scale_mod.rds
+data/tests_pred.rds
